Fixed spacing in modal cards and modals

--- a/alevi22-website/src/Components/Card/ModalCard/ModalCard.css
+++ b/alevi22-website/src/Components/Card/ModalCard/ModalCard.css
@@ -1,7 +1,15 @@
 .modal-card {
     position: relative;
     height: 400px;
+    width: 100%;
+    padding: 30px;
+    color: var(--light-color);
+    text-shadow: 2px 2px 6px black;
     transition: all 0.3s ease 0s;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
 }
 
 @media(hover: hover) and (pointer: fine) {
@@ -11,33 +19,19 @@
     }
 }
 
-.modal-card .card-text {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    margin: 30px;
-    max-width: 100%;
-    color: var(--light-color);
-    text-shadow: 2px 2px 6px black;
-}
-
 .modal-card img.background {
     display: block;
-    height: 100%;
-    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: inherit;
+    width: inherit;
     object-fit: cover;
     filter: brightness(45%);
+    z-index: -1;
 }
 
 .modal-card img.logo {
     height: 40px;
-    position: absolute;
-    top: 30px;
-    left: 30px;
-}
-
-.modal-card .content {
-    background-color: var(--light-color);
-    /*max-height: 0;*/
-    overflow: hidden;
+    display: block;
 }
