--- a/alevi22-website/src/Components/Modal/Modal.css
+++ b/alevi22-website/src/Components/Modal/Modal.css
@@ -44,34 +44,39 @@
 }
 
 .modal .header {
-    height: 225px;
+    height: 250px;
     width: 100%;
     position: relative;
-}
-
-.modal .header-text {
-    position: absolute;
-    bottom: 0px;
-    left: 0px;
-    margin: 30px;
-    max-width: 100%;
     color: var(--light-color);
     text-shadow: 2px 2px 6px black;
+    padding: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+@media screen and (max-width: 900px) {
+    .modal .header {
+        height: 300px;
+    }
 }
 
 .modal img.background {
     display: block;
-    height: 100%;
-    width: 100%;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    height: inherit;
+    width: inherit;
     object-fit: cover;
     filter: brightness(45%);
+    z-index: -1;
 }
 
 .modal img.logo {
     height: 40px;
-    position: absolute;
-    top: 30px;
-    left: 30px;
+    display: block;
 }
 
 .modal-close-button {
